--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,28 @@
     <application
         android:name=".merge.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/foreigner"
+        android:roundIcon="@drawable/foreigner_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".loadByStaticProxy.ProxyActivity"></activity>
+        <!-- 宿主主界面activity -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
         </activity>
-        <activity android:name=".StubActivity" />
+
+        <!-- 静态代理占坑Activity -->
+        <activity android:name=".loadByStaticProxy.ProxyActivity"/>
+
+        <!-- 动态代理占坑Activity -->
+        <activity android:name=".StubActivity"/>
     </application>
 
 </manifest>
