固化了插件资源id，但是无法在插件xml设置图片-luson 2020-0404

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
         <!-- 动态代理占坑Activity -->
         <activity android:name=".StubActivity"/>
+        <activity android:name=".SecondActivity" />
     </application>
 
 </manifest>
