--- a/warcraftplugin/build.gradle
+++ b/warcraftplugin/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'com.android.application'
 
 apply from: 'public-xml.gradle'
 android {
-    compileSdkVersion 26
+    compileSdkVersion 29
 
 
 
     defaultConfig {
         applicationId "com.example.warcraft"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -29,7 +29,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:support-v4:26.0.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta02'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
