--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0-beta02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta02'
+//    androidTestImplementation 'androidx.test:runner:1.3.0-beta02'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
