添加个new task Activity，2020-08-16

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <!-- 动态代理占坑Activity -->
         <activity android:name=".StubActivity"/>
         <activity android:name=".SecondActivity" />
+        <activity android:name=".ThirdActivity"
+            android:taskAffinity="com.bf.qinx.hostofplugin2"
+            />
     </application>
 
 </manifest>
